// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hits() calls twice render(<Hits props />, container) 1`] = `
<Hits
  cssClasses={
    Object {
      "emptyRoot": "ais-Hits--empty",
      "item": "ais-Hits-item",
      "list": "ais-Hits-list",
      "root": "ais-Hits root cx",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`hits() calls twice render(<Hits props />, container) 2`] = `
<Hits
  cssClasses={
    Object {
      "emptyRoot": "ais-Hits--empty",
      "item": "ais-Hits-item",
      "list": "ais-Hits-list",
      "root": "ais-Hits root cx",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;

exports[`hits() renders transformed items 1`] = `
<Hits
  cssClasses={
    Object {
      "emptyRoot": "ais-Hits--empty",
      "item": "ais-Hits-item",
      "list": "ais-Hits-list",
      "root": "ais-Hits",
    }
  }
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
        "transformed": true,
      },
    ]
  }
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
          "transformed": true,
        },
      ],
    }
  }
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
      },
    }
  }
/>
`;
